@@ -1,7 +1,7 @@
 
  The Affiliates Import            Wordpress Plugin             www.itthinx.com
  
- Copyright 2017-2020 "kento" (Karim Rahimpur) www.itthinx.com
+ Copyright 2017-2021 "kento" (Karim Rahimpur) www.itthinx.com
  
  The files COPYRIGHT.txt and LICENSE.txt as well as ALL NOTICES IN THE
  HEADERS OF ALL FILES MUST BE KEPT INTACT.
@@ -27,7 +27,12 @@
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  
  
- Visit http://www.itthinx.com/ for help on this and other plugins.
+ Visit https://www.itthinx.com/ for help on this and other plugins.
  
- Plugin page: http://www.itthinx.com/plugins/affiliates-import
- Affiliates plugin: https://wordpress.org/plugins/affiliates
+ Plugin page: https://www.itthinx.com/plugins/affiliates-import/
+
+ Compatible with:
+
+ Affiliates            : https://wordpress.org/plugins/affiliates
+ Affiliates Pro        : https://www.itthinx.com/shop/affiliates-pro/
+ Affiliates Enterprise : https://www.itthinx.com/shop/affiliates-enterprise/
