@@ -2,6 +2,7 @@
 
 = 1.3.0 =
 * WordPress 5.7 compatible.
+* Updated and corrected references and links, using https where appropriate.
 
 = 1.2.0 =
 * WordPress 5.5 compatible.
